namespace StudyOrganizer.Domain.Modules;

public sealed class StudyModule
{
    public Guid Id { get; private set; }

    public Guid OwnerId { get; private set; }

    public string Name { get; private set; } = null!;

    public string? Code { get; private set; }

    public string? Description { get; private set; }

    public string? Color { get; private set; }

    public DateTimeOffset CreatedAt { get; private set; }

    private StudyModule()
    {
    }

    public StudyModule(
        Guid ownerId,
        string name,
        string? code = null,
        string? description = null,
        string? color = null)
    {
        if (ownerId == Guid.Empty)
        {
            throw new ArgumentException(
                "Owner ID must not be empty.",
                nameof(ownerId));
        }

        if (string.IsNullOrWhiteSpace(name))
        {
            throw new ArgumentException(
                "Module name must not be empty.",
                nameof(name));
        }

        Id = Guid.NewGuid();
        OwnerId = ownerId;
        Name = name.Trim();
        Code = NormalizeOptionalValue(code);
        Description = NormalizeOptionalValue(description);
        Color = NormalizeOptionalValue(color);
        CreatedAt = DateTimeOffset.UtcNow;
    }
    public void Update(
        string name,
        string? code,
        string? description,
        string? color)
    {
        if (string.IsNullOrWhiteSpace(name))
        {
            throw new ArgumentException(
                "Module name must not be empty.",
                nameof(name));
        }

        Name = name.Trim();
        Code = NormalizeOptionalValue(code);
        Description = NormalizeOptionalValue(description);
        Color = NormalizeOptionalValue(color);
    }

    private static string? NormalizeOptionalValue(string? value)
    {
        return string.IsNullOrWhiteSpace(value)
            ? null
            : value.Trim();
    }
}