namespace StudyOrganizer.Domain.Users;

public enum ProfileGender
{
    Female,
    Male,
    PreferNotToSay
}