namespace StudyOrganizer.Domain.Tasks;

public enum StudyTaskStatus
{
    Open = 0,
    Completed = 1
}